--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     depends_on:
@@ -26,3 +27,4 @@ services:
 
 volumes:
   postgres_data:
+  media_volume:
